--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
